deployments/workloads/media/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-deployment
  labels:
    app: sonarr
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: nfs-media
              mountPath: /media/shows
              subPath: shows
            - name: nfs-media
              mountPath: /downloads
              subPath: downloads
            - name: nfs-configs
              mountPath: /config
              subPath: sonarr
          resources:
            limits:
              memory: "1000Mi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
      volumes:
        - name: nfs-media
          nfs:
            server: truenas
            path: /mnt/bigdata/kubernetes/media/data
            readOnly: false
        - name: nfs-configs
          nfs:
            server: truenas
            path: /mnt/fast/media-configs
            readOnly: false
