deployments/workloads/media/sonarr/cilium.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
spec:
  endpointSelector:
    matchLabels:
      app: sonarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: jellyseerr
      toPorts:
        - ports:
            - port: "8989"
    - fromEndpoints:
        - matchLabels:
            app: prowlarr
      toPorts:
        - ports:
            - port: "8989"
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8989"
  egress:
    - toFQDNs:
        - matchName: api.opensubtitles.com
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
